--- a/plugins/woocommerce/i18n/languages/woocommerce.pot
+++ b/plugins/woocommerce/i18n/languages/woocommerce.pot
@@ -36742,7 +36742,7 @@ msgstr ""
 
 #. translators: %s is product title
 #: templates/single-product-reviews.php:77
-msgid "Leave a Reply to %s"
+msgid "Add a review to %s"
 msgstr ""
 
 #: templates/single-product-reviews.php:81
